descender overflow fix

--- a/src/app/connect/index.less
+++ b/src/app/connect/index.less
@@ -81,6 +81,8 @@
         overflow: hidden;
         text-overflow: ellipsis;
         color: @pw;
+        height: 16px;
+        line-height: 1;
       }
 
       &.active {
